<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/org.buildmlearn.learnfrommap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical" >

    <org.buildmlearn.learnfrommap.TextViewPlus
        android:id="@+id/list_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        foo:customFont="Roboto_Light.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/option1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/option1"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:layout_weight="0.5"
            foo:customFont="Roboto_Light.ttf" />

        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/option2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="3dp"
            android:text="@string/option2"
            android:textColor="@android:color/white"
            android:layout_weight="0.5"
            foo:customFont="Roboto_Light.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/option3"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/option3"
            android:textColor="@android:color/white"
            android:layout_weight="0.5"
            foo:customFont="Roboto_Light.ttf" />

        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/option4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="@string/option4"
            android:textColor="@android:color/white"
            android:layout_weight="0.5"
            foo:customFont="Roboto_Light.ttf" />
    </LinearLayout>

</LinearLayout>