<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/org.buildmlearn.learnfrommap"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.buildmlearn.learnfrommap.Mcq$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="7dp"
        android:background="@drawable/layout_right_answer"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/mcq_question"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            foo:customFont="Roboto_Light.ttf" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#ffffff" />

        <EditText
            android:id="@+id/fill_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/answer"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#C0ffffff" >

            <requestFocus />
        </EditText>
        
        <org.buildmlearn.learnfrommap.TextViewPlus
            android:id="@+id/fill_correct_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            foo:customFont="Roboto_Light.ttf" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#ffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <org.buildmlearn.learnfrommap.TextViewPlus
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/next_btn"
                android:gravity="center_vertical|left"
                android:padding="10dp"
                android:text="@string/time"
                android:textColor="@android:color/white"
                foo:customFont="Roboto_Light.ttf" />

            <org.buildmlearn.learnfrommap.TextViewPlus
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:background="@drawable/custom_tile_color_no_bg"
                android:clickable="true"
                android:gravity="center_vertical|right"
                android:onClick="nextQuestion"
                android:padding="10dp"
                android:text="@string/next_question"
                android:textColor="@android:color/white"
                foo:customFont="Roboto_Light.ttf" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>